# nut_webgui

./: .gitignore  .gitmodules  CHANGELOG  Cargo.toml  Dockerfile  Dockerfile.template  LICENSE  Makefile  README.md  bacon.toml  build.config.json  build.test.config.json  build_images.sh  package.json  pnpm-lock.yaml  server_start.sh  start_dev.sh  start_dev_server.sh  style.css  tailwind.config.js
client/: package.json  (+2 more)
nut_webgui/: Cargo.toml  askama.toml  bacon.toml
nut_webgui/src/: auth.rs  background_service.rs  base_path.rs  config.rs  device_entry.rs  diff_utils.rs  event.rs  events.rs  http.rs  main.rs  openmetric.rs  reverse_dns.rs  service.rs  skip_tls_verifier.rs  state.rs  sync.rs  ups_daemon_state.rs  ups_services.rs  uri_path.rs
nut_webgui/src/_ups_services/: upsd_poll_service.rs  upsd_state_service.rs
nut_webgui/src/auth/: access_token.rs  error.rs  nonce.rs  password_str.rs  permission.rs  signed_token.rs  token_signer.rs  user_session.rs  user_store.rs  username.rs
nut_webgui/src/config/: cfg_arg.rs  cfg_args.rs  cfg_env.rs  cfg_fallback.rs  cfg_toml.rs  cfg_user.rs  error.rs  macros.rs  tls_mode.rs  uri_path.rs  utils.rs
nut_webgui/src/event/: batch.rs  channel.rs  event_batch.rs
nut_webgui/src/http/: commands.rs  common.rs  event_api.rs  hypermedia.rs  json.rs  json_api.rs  metric.rs  middlewares.rs  probe.rs  probes.rs  problem_detail.rs  request_extension.rs
nut_webgui/src/http/event_api/: error.rs  handshake.rs  message.rs  message_broadcast.rs
nut_webgui/src/http/hypermedia/: device_entry_impl.rs  device_entry_impls.rs  error.rs  filter.rs  filters.rs  middleware.rs  notification.rs  notifications.rs  route.rs  routes.rs  semantic_classes.rs  semantic_type.rs  unit.rs  units.rs  ups_status.rs  util.rs  utils.rs
nut_webgui/src/http/hypermedia/middleware/: auth_renew_session.rs  auth_user.rs  authorize_user.rs  htmx_redirect.rs
nut_webgui/src/http/hypermedia/route/: api_key.rs  connection.rs  home.rs  layout.rs  login.rs  logout.rs  not_found.rs  server_info.rs  static_content.rs  system.rs  topology.rs  ups.rs
nut_webgui/src/http/hypermedia/routes/: home.rs  layout.rs  not_found.rs  server_info.rs  static_content.rs  ups.rs
nut_webgui/src/http/hypermedia/templates/: +layout.html  +page.html  error.html  icons.html  notification.html  table_rows.html  themes.html
nut_webgui/src/http/json_api/: middleware.rs  problem_detail.rs  route.rs
nut_webgui/src/http/middlewares/: daemon_status.rs
nut_webgui/src/http_server/: json.rs  middlewares.rs  probes.rs
nut_webgui/src/http_server/hypermedia/: routes.rs
nut_webgui/src/openmetric/: collector.rs  known_metric.rs
nut_webgui/src/service/: error.rs  service_sync_desc.rs  service_sync_device.rs  service_sync_status.rs  sync_desc.rs  sync_device.rs  sync_status.rs
nut_webgui/src/sync/: desc_sync.rs  error.rs  reverse_dns.rs  sync_desc.rs  sync_device.rs  sync_status.rs  ups_sync.rs
nut_webgui/src/ups_services/: upsd_poll_service.rs
nut_webgui_client/: Cargo.toml  build.rs  package-lock.json  package.json  pnpm-lock.yaml  postcss.build.js  tsconfig.json
nut_webgui_client/scripts/: build.js
nut_webgui_client/src/: index.js  lib.rs  style.css  util.js  utils.js
nut_webgui_client/src/component/: attribute_control.js  bitflag_input.js  clipboard_button.js  confirmation_modal.js  duration_input.js  gauge_bar.js  gauge_radial.js  graph.js  locale_date.js  search_list.js  time_display.js  ttl_element.js
nut_webgui_client/src/components/: clipboard_button.js  confirmation_button.js  confirmation_modal.js  gauge.js  search_list.js  theme_selector.js  time_display.js  ttl_element.js
nut_webgui_upsmc/: Cargo.toml
nut_webgui_upsmc/__tests/: test_parser.rs
nut_webgui_upsmc/__tests/common/: mod.rs
nut_webgui_upsmc/src/: client.rs  clients.rs  cmd_name.rs  command.rs  commands.rs  errors.rs  inst_cmd.rs  internal.rs  lib.rs  parser.rs  responses.rs  ups_event.rs  ups_name.rs  ups_status.rs  ups_variables.rs  value.rs  var_name.rs  var_type.rs  variables.rs
nut_webgui_upsmc/src/_old/: client.rs  mod.rs  parser.rs  ups_variables.rs
nut_webgui_upsmc/src/client/: client_auth.rs  client_base.rs  client_pool.rs  client_tls.rs
nut_webgui_upsmc/src/clients/: client_auth.rs  client_base.rs  client_pool.rs  client_tcp.rs  client_tls.rs
nut_webgui_upsmc/src/internal/: ascii_rules.rs  escape.rs  item_pool.rs  lexer.rs  parser_utils.rs  tokenizer.rs  word_split.rs
nut_webgui_upsmc/src/response/: get_cmd_desc.rs  get_ups_desc.rs  get_var.rs  get_var_desc.rs  get_var_type.rs  list_client.rs  list_cmd.rs  list_enum.rs  list_range.rs  list_rw.rs  list_ups.rs  list_var.rs  misc.rs
nut_webgui_upsmc/src/responses/: get_cmd_desc.rs  get_num_attach.rs  get_ups_desc.rs  get_var.rs  get_var_desc.rs  get_var_type.rs  list_client.rs  list_cmd.rs  list_enum.rs  list_range.rs  list_rw.rs  list_ups.rs  list_var.rs  misc.rs
nut_webgui_upsmc/tests/: parser_tests.rs  test_client.rs  test_cmd_name.rs  test_device_integration.rs  test_error.rs  test_parser.rs  test_serde.rs  test_ups_events.rs  test_ups_name.rs  test_ups_status.rs  test_var_name.rs  test_variables_map.rs  validation_tests.rs
nut_webgui_upsmc/tests/common/: mod.rs
server/: Cargo.toml  askama.toml
server/.cargo/: config.toml
server/src/: http_server.rs  main.rs  server.rs  ups_daemon_state.rs  ups_mem_store.rs  ups_service.rs  ups_services.rs  upsd_client.rs
server/src/http_server/: common.rs  hypermedia.rs  json.rs  probes.rs
server/src/http_server/hypermedia/: notifications.rs  routes.rs  semantic_classes.rs  ups_info.rs  ups_status.rs  utils.rs
server/src/server/: notifications.rs  routes.rs  ups_info.rs  utils.rs
server/src/server/routes/: home.rs  not_found.rs  ups.rs
server/src/server/templates/: +layout.html  +page.html  ups_table.html
server/src/ups_service/: storage_service.rs  ups_poll_service.rs
server/src/ups_services/: upsd_poll_service.rs  upsd_state_service.rs
server/src/upsd_client/: client.rs  errors.rs  parser.rs  protocol.rs  ups_variables.rs
server/src/upsd_client/parser/: unit_tests.rs
(+146 files in other folders)
