[package]
name = "nut_webgui"
description = "Light weight web interface for Network UPS Tools."

version.workspace = true
edition.workspace = true
authors.workspace = true
documentation.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
askama = { version = "0.14", features = ["blocks"] }
axum = { version = "0.8" }
chrono = { version = "0.4", default-features = false, features = [
        "iana-time-zone",
        "now",
        "serde",
] }
clap = { version = "4", features = ["derive"] }
futures = { version = "0.3" }
nut_webgui_client = { path = "../nut_webgui_client" }
nut_webgui_upsmc = { path = "../nut_webgui_upsmc", features = [
        "serde",
        "rustls",
] }
rustls-platform-verifier = { version = "0.5" }
serde = { version = "1", features = ["serde_derive"] }
tokio = { version = "1", features = [
        "macros",
        "net",
        "rt-multi-thread",
        "signal",
] }
tokio-util = { version = "0.7" }
toml = { version = "0.8", default-features = false, features = ["parse"] }
tower = { version = "0.5" }
tower-http = { version = "0.6", features = [
        "compression-br",
        "compression-deflate",
        "compression-gzip",
        "cors",
        "fs",
        "normalize-path",
        "set-header",
        "timeout",
        "tower",
        "trace",
        "limit",
        "validate-request",
] }
tracing = "0.1"
tracing-subscriber = "0.3"
