[package]
name = "nut_webgui"
description = "Light weight web interface for Network UPS Tools."

version.workspace = true
edition.workspace = true
authors.workspace = true
documentation.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
askama = { version = "0.14", features = ["blocks"] }
axum = { version = "0.8" }
axum-extra = { version = "0.10", features = ["cookie"] }
base64 = { version = "0.22" }
chrono = { version = "0.4", default-features = false, features = [
        "iana-time-zone",
        "now",
        "serde",
] }
cookie = { package = "cookie", version = "0.18", features = ["percent-encode"] }
clap = { version = "4", features = ["derive"] }
futures = { version = "0.3" }
hmac = { version = "0.12" }
nut_webgui_client = { path = "../nut_webgui_client" }
nut_webgui_upsmc = { path = "../nut_webgui_upsmc", features = [
        "rustls",
        "serde",
] }
rand_chacha = { version = "0.9", features = ["os_rng"] }
rustls-platform-verifier = { version = "0.5" }
serde = { version = "1", features = ["serde_derive"] }
sha2 = { version = "0.10" }
scrypt = { version = "0.11", features = [] }
tokio = { version = "1", features = [
        "macros",
        "net",
        "rt-multi-thread",
        "signal",
] }
tokio-util = { version = "0.7" }
toml = { version = "0.9", default-features = false, features = [
        "std",
        "parse",
        "serde",
] }
tower = { version = "0.5" }
tower-http = { version = "0.6", features = [
        "compression-br",
        "compression-deflate",
        "compression-gzip",
        "cors",
        "fs",
        "limit",
        "normalize-path",
        "set-header",
        "timeout",
        "tower",
        "trace",
        "validate-request",
] }
tracing = "0.1"
tracing-subscriber = "0.3"
