[package]
name = "nut_webgui_client"

description = "nut_webgui's client-side assets"
version.workspace = true
edition.workspace = true
authors.workspace = true
documentation.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[build-dependencies]
sha2 = "0.10"
base16ct = { version = "1", features = ["alloc"] }
