[package]
name = "nut_webgui_client"

description = "nut_webgui's client-side assets"
version.workspace = true
edition.workspace = true
authors.workspace = true
documentation.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[build-dependencies]
sha2 = "0.11"
base16ct = { version = "1", features = ["alloc"] }
rolldown = { version = "1.0.3" }
blake3 = { version = "1", features = ["pure", "no_avx2", "no_avx512", "no_neon", "no_sse2", "no_sse41"]}
tokio = { version = "1" }
