[package]
name = "nut_webgui_upsmc"
version = "0.1.1"
edition = "2024"

authors = ["Timur Olur <pm@smdd.dev>"]
description = "UPS Management Client"
documentation = "https://github.com/SuperioOne/nut_webgui"
homepage = "https://github.com/SuperioOne/nut_webgui"
keywords = ["nut", "ups", "network-ups-tools", "RFC9271"]
license = "Apache-2.0"
repository = "https://github.com/SuperioOne/nut_webgui"

[features]
default = ["rustls"]
serde = ["dep:serde"]
rustls = ["dep:tokio-rustls"]

[dev-dependencies]
tokio = { version = "1", features = [
        "io-util",
        "macros",
        "net",
        "rt",
        "rt-multi-thread",
        "sync",
        "time",
], default-features = false }
rustls-platform-verifier = { version = "*" }
tokio-test = { version = "0.4" }
serde_json = { version = "1" }

[dependencies]
serde = { version = "1", optional = true }
tokio-rustls = { version = "0.26", default-features = false, features = [
        "aws_lc_rs",
        "logging",
], optional = true }
tokio = { version = "1", features = [
        "net",
        "io-util",
        "sync",
        "time",
], default-features = false }
tracing = "0.1"
