[package]
name = "nut_webgui_upsmc"
description = "UPS Management Client"
version = "0.2.3"
edition.workspace = true
authors.workspace = true
documentation.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
serde = ["dep:serde"]
rustls = ["dep:tokio-rustls"]

[dev-dependencies]
tokio = { version = "1", features = [
        "io-util",
        "macros",
        "net",
        "rt",
        "rt-multi-thread",
        "sync",
        "time",
], default-features = false }
tokio-test = { version = "0.4" }
serde_json = { version = "1" }

[dependencies]
serde = { version = "1", optional = true }
tokio-rustls = { version = "0.26", default-features = false, features = [
        "ring",
        "logging",
], optional = true }
tokio = { version = "1", features = [
        "net",
        "io-util",
        "sync",
        "time",
], default-features = false }
tracing = "0.1"
