[package]
name = "nut_webgui"
version = "0.3.2"
edition = "2021"
license = "Apache-2.0"
keywords = ["nut", "ups", "network-ups-tools", "self-hosted", "management"]
repository = "https://github.com/SuperioOne/nut_webgui"
homepage = "https://github.com/SuperioOne/nut_webgui"
documentation = "https://github.com/SuperioOne/nut_webgui"
authors = ["Timur Olur <pm@smdd.dev>"]
description = "Light weight web interface for Network UPS Tools."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = "debuginfo"
lto = true

[dependencies]
askama = { version = "0.12.1", default-features = false, features = ["with-axum", "mime", "mime_guess"] }
askama_axum = { version = "0.4.0" }
axum = { version = "0.7.5" }
axum-core = "0.4.3"
tokio = { version = "1.37.0", features = ["default", "net", "macros", "rt-multi-thread", "signal"] }
tokio-util = { version = "0.7.10", features = ["default"] }
tower = { version = "0.4.13" }
tower-http = { version = "0.5.2", features = ["default", "fs", "trace", "timeout", "cors", "tower", "util", "compression-gzip", "compression-deflate", "compression-br"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
shell-words = "1.1.0"
serde = { version = "1.0.197", features = ["default", "serde_derive"] }
uuid = { version = "1.8.0", features = ["v4"] }
clap = { version = "4.5.4", features = ["derive", "default"] }
