[package]
name = "nut_webgui"
version = "0.4.1"
edition = "2021"
license = "Apache-2.0"
keywords = ["nut", "ups", "network-ups-tools", "self-hosted", "management"]
repository = "https://github.com/SuperioOne/nut_webgui"
homepage = "https://github.com/SuperioOne/nut_webgui"
documentation = "https://github.com/SuperioOne/nut_webgui"
authors = ["Timur Olur <pm@smdd.dev>"]
description = "Light weight web interface for Network UPS Tools."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = "debuginfo"
lto = true

[dependencies]
algorithms_random = { git = "https://github.com/SuperioOne/algorithms.git" }
askama = { version = "0.12.1", default-features = false, features = ["with-axum", "mime", "mime_guess"] }
askama_axum = { version = "0.4.0" }
axum = { version = "0.7.5", features = ["original-uri"] }
axum-core = "0.4.3"
chrono = { version = "0.4.38", default-features = false ,features = ["now", "serde", "iana-time-zone"]}
clap = { version = "4.5.4", features = ["derive", "default"] }
serde = { version = "1.0.197", features = ["default", "serde_derive"] }
tokio = { version = "1.37.0", features = ["default", "net", "macros", "rt-multi-thread", "signal"] }
tokio-util = { version = "0.7.10", features = ["default"] }
tower = { version = "0.4.13" }
tower-http = { version = "0.5.2", features = ["compression-br", "compression-deflate", "compression-gzip", "cors", "default", "fs", "normalize-path", "set-header", "timeout", "tower", "trace", "util"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
